2004-02-13  Jackson Harper  <jackson@ximian.com>

	* FileStream.cs: Throw some more exceptions for invalid
	params. Fixes some unit test failures.
	* BufferedStream.cs: If the stream is closed (can't read from it
	or write to it) throw an ObjectDisposedException.
	
Tue Jan 20 23:10:22 CET 2004 Paolo Molaro <lupus@ximian.com>

	* StreamWriter.cs, TextWriter.cs: comply with the documented
	behaviour and use a decode buffer to improve performance.

2004-01-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Path.cs: now Path.GetFullPath ("/") returns "/" instead of "".

2004-01-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Path.cs: add the trailing directory separator only for volumes.
	Fixes bug #53035.

2004-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* IntPtrStream.cs: Fix build bustage.
	
	* IntPtrStream.cs: Add a 'Closed' event. Also throw exceptions after
	the stream is closed.

2004-01-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* FileStream.cs: Locking from bug #32344 removed. This is not
	necessary because the correct fix was actually in the console.
	This fixes bug #53026. Miguel de Icaza reviewed/approved this
	patch.

2004-01-14  Zoltan Varga  <vargaz@freemail.hu>

	* FileStream.cs (.ctor): Avoid allocating a large buffer when reading
	from small files.

2004-01-10  Atsushi Enomoto <atsushi@ximian.com>

	* Path.cs : GetDirectoryName ("c:\readme.txt") should return "c:\"
	  instead of "c:" . This fixed bug #52735.

2004-01-04  Nick Drochak <ndrochak@gol.com>

	* Path.cs: Remove defined but unused variable, and also got rid of
	some unreachable code.  Eliminates some build warnings.

2003-12-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* BinaryWriter.cs: use one encoding buffer for writing
	strings rather than allocting one/string. HUGE perf
	boost when writing many strings.

2003-12-25  Atsushi Enomoto <atsushi@ximian.com>

	* Path.cs : Fixed GetFullPath() (and CanonicalizePath()), 